--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -27,7 +27,7 @@
 				<nav>
 					<h2 class="logo">UgAvenue Media <span>Group</span></h2>
 					<ul class="navbar-nav me-auto mt-2 mt-lg-0">
-						<li><a href="pages/portfolio.html">Home</a></li>
+						<li><a href="pages/index.html">Home</a></li>
 						<!-- <li><a href="/about_us.html">About Us</a></li> -->
 						<li><a href="pages/services.html">Services</a></li>
 						<li><a href="pages/contact_us.html">Contact Us</a></li>
