--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UgAvenue Media Group Portfolio</title>
 		<link rel="icon" href="/ptfl.png" />
-		<link rel="stylesheet" type="text/css" href="/styles.css" />
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -29,8 +29,8 @@
 					<ul class="navbar-nav me-auto mt-2 mt-lg-0">
 						<li><a href="index.html">Home</a></li>
 						<!-- <li><a href="/about_us.html">About Us</a></li> -->
-						<li><a href="pages/services.html">Services</a></li>
-						<li><a href="pages/contact_us.html">Contact Us</a></li>
+						<li><a href="services.html">Services</a></li>
+						<li><a href="contact_us.html">Contact Us</a></li>
 					</ul>
 				</nav>
 
@@ -38,7 +38,7 @@
 			<!---About section--->
 			<section class="about">
 				<div class="imgContainer">
-					<img  class="img-abt" src="./img/logo.jpg" />
+					<img  class="img-abt" src="../img/logo.jpg" />
 				</div>
 				<div class="main">
 					<div class="about-text">
