--- a/pages/index.html
+++ b/pages/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UgAvenue Media Group Portfolio</title>
 		<link rel="icon" href="/ptfl.png" />
-		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -28,9 +28,9 @@
 					<h2 class="logo">UgAvenue Media <span>Group</span></h2>
 					<ul class="navbar-nav me-auto mt-2 mt-lg-0">
 						<li><a href="#">Home</a></li>
-						<li><a href="pages/about_us.html">About Us</a></li>
-						<li><a href="pages/services.html">Services</a></li>
-						<li><a href="pages/contact_us.html">Contact Us</a></li>
+						<li><a href="about_us.html">About Us</a></li>
+						<li><a href="services.html">Services</a></li>
+						<li><a href="contact_us.html">Contact Us</a></li>
 					</ul>
 				</nav>
 
@@ -55,7 +55,7 @@
 			<!---About section--->
 			<section class="about">
 				<div class="imgContainer">
-					<img src="img/logo.jpg" />
+					<img src="../img/logo.jpg" />
 				</div>
 				<div class="main">
 					<div class="about-text">
@@ -96,7 +96,7 @@
 						<div class="corner right-bottom"></div>
 						<div class="corner left-bottom"></div>
 						<h5>Visual Production</h5>
-						<img src="img/visual studio .jpg" alt="Lakeview" />
+						<img src="../img/visual studio .jpg" alt="Lakeview" />
 						<figcaption>
 							<p>
 								We offer a range of services related to creating visual content.
@@ -119,7 +119,7 @@
 							Digital <br />
 							Marketing
 						</h5>
-						<img src="img/digital market .jpg" alt="Lakeview" />
+						<img src="../img/digital market .jpg" alt="Lakeview" />
 						<figcaption>
 							<br>
 							<p>
@@ -140,7 +140,7 @@
 						<div class="corner right-bottom"></div>
 						<div class="corner left-bottom"></div>
 						<h5>IT Solutions</h5>
-						<img src="img/wed dev.jpg" alt="Lakeview" />
+						<img src="../img/wed dev.jpg" alt="Lakeview" />
 						<figcaption class="p3">
 							<br>
 							<br>
