--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UgAvenue Media Group Portfolio</title>
 		<link rel="icon" href="/ptfl.png" />
-		<link rel="stylesheet" type="text/css" href="styles.css" />
+		<link rel="stylesheet" type="text/css" href="../styles.css" />
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
@@ -27,9 +27,9 @@
 				<nav>
 					<h2 class="logo">UgAvenue Media <span>Group</span></h2>
 					<ul class="navbar-nav me-auto mt-2 mt-lg-0">
-						<li><a href="/pages/index.html">Home</a></li>
-						<li><a href="/pages/about_us.html">About Us</a></li>
-						<li><a href="/pages/services.html">Services</a></li>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="about_us.html">About Us</a></li>
+						<li><a href="services.html">Services</a></li>
 						<!-- <li><a href="#contact us">Contact Us</a></li> -->
 					</ul>
 				</nav>
