--- a/pages/director.html
+++ b/pages/director.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UgAvenue Media Group Portfolio</title>
-		<link rel="stylesheet" href="/css/director.css" />
+		<link rel="stylesheet" href="../director.css" />
 	</head>
 	<body>
 		<div class="wrapper">
@@ -20,7 +20,7 @@
 					magni sunt tempora enim repellendus. Minima fuga adipisci aperiam fugiat!
 				</p>
 			</article>
-			<img class="img-me" src="/img/ad1.jpg.jpg" alt="Wallen Allan" />
+			<img class="img-me" src="../img/ad1.jpg.jpg" alt="Wallen Allan" />
 		</div>
 	</body>
 </html>
