--- a/pages/contact_us.html
+++ b/pages/contact_us.html
@@ -52,13 +52,13 @@
 					</ul>
 
 					<ul class="links">
-						<li>
+						<li class="icon">
 							<a href="https://www.instagram.com/ugavenuemediagroup?utm_source=qr&igsh=c3E4dmhkbDN1emJu"><i class="fab fa-square-instagram"></i></a>  <!-- Instagram -->
 						</li>
-						<li>
+						<li class="icon">
 							<a href="https://www.linkedin.com/company/ug-avenue-media-group/"><i class="fab fa-linkedin"></i></a>  <!-- LinkedIn -->
 						</li>
-						<li>
+						<li class="icon">
 							<a href="https://x.com/ugavenuemedia?t=0ZQF8K1iYysjP3CqoVPIOQ&s=09"><i class="fa-brands fa-x-twitter"></i></a>  <!-- X-twitter -->
 						</li>
 					</ul>
