--- a/pages/director.html
+++ b/pages/director.html
@@ -4,13 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UgAvenue Media Group Portfolio</title>
-		<link rel="stylesheet" href="/css/director.css" />
+		<link rel="stylesheet" href="../director.css" />
 	</head>
 	<body>
 		<div class="container">
 			<article class="card">
 				<div class="background">
-					<img src="/img/ad1.jpg.jpg" alt="profile" />
+					<img src="../img/ad1.jpg.jpg" alt="profile" />
 				</div>
 				<div class="content">
 					<h2>Mr Wallen Allan</h2>
@@ -26,7 +26,7 @@
 						<a class="link" href="https://x.com/ugavenuemedia?t=0ZQF8K1iYysjP3CqoVPIOQ&s=09"><li class="chip fa-brand fa-x-twitter">Twitter</li></a>
 					</ul>
 					<div class="action-buttons">
-						<a href="/pages/portfolio.html" class="secondary">Home</a>
+						<a href="../pages/portfolio.html" class="secondary">Home</a>
 					</div>
 				</div>
 			</article>
